

==============================
Release 2.*
==============================
2014-05-28    Add possibility to search for UI elements which has the keyboard focus
2014-05-28    Use a toggle slider for a better visualization of the enabled and disabled state of the ElementFinder
2014-05-26    Add clear button to remove all visible elements in the ElementFinder
2014-05-26    Add support for all .net available languages for the window buttons

==============================
Release 2.0.0.X
==============================
2014-04-07    Rename "Using" by "Use"
2014-04-07    Adjust error output
2014-04-05    Remove methods to search for children in the BasicList and BasicCombobox themself, they was not working stable enough
2014-04-05    If no timeout was set, the UI and WindowFinder search methods was return too fast even a result would be able to return
2014-04-05    The Do.Launch was has really launched the application
2014-04-04    Adjust documentation to not show any warning
2014-04-04    Add documentations
2014-04-03    Write usage of the interval in exceptions as well
2014-04-03    Add possibility to define an interval for searching for windows
2014-04-03    Add possibility to define an interval for waiting of the CPU idle
2014-04-03    Set the working directory of the proces called by the Do.Launch(*)
2014-04-03    Add possibility to define an interval for searching of UI elements
2014-04-02    ElementFinder: Add possibility to copy the automation id to the clipboard automatically
2014-04-02    Let the MouseEx and KeyboardEx return the CombinableDo to be able to append additional actions
2014-04-01    ElementFinder: Automatically select the first element in the tree
2014-04-01    ElementFinder: Add possibility to hide empty properties
2014-04-01    ElementFinder: Show item automation properties
2014-04-01    ElementFinder: Load and save current application settings on close and loading
2014-04-01    ElementFinder: Adjust style of the CopyableTextBox